CHANGELOG
---------

Since 1.1:
---------
* Added SSL support with CURL
* added debug output ( $client->setDebug( true ); )
* bug fixes
* Return PHP Errors as an XMLRPC Fault using Custom Error Handing (matt)

Since 1.0:
---------
* Added authentification, http password