@@ -1,17 +1,18 @@
 <?
+ob_start();
+
+
 /*
 
 // Uncomment this to have PHP Errors returned as XMLRPC Faults (error number 666)
 // see ezxmlrpc/classes/ezxmlrpcerrorhandler.php
 
+*/
 error_reporting( 0 );
 include_once( "ezxmlrpc/classes/ezxmlrpcresponse.php" );
 include_once( "ezxmlrpc/classes/ezxmlrpcerrorhandler.php" );
 set_error_handler( "ezxmlrpcErrorHandler" );
 
-*/
-
-ob_start();
 
 include_once( "ezxmlrpc/classes/ezxmlrpcserver.php" );
 include_once( "ezxmlrpc/classes/ezxmlrpcstring.php" );
